--- a/contact.html
+++ b/contact.html
@@ -62,7 +62,7 @@
 					</div>
 					<div class="card border-secondary mb-3" style="max-width: 35rem;">
 						<div class="card-body text-center">
-							<img class="avatar rounded-circle" src="" alt="Avatar">
+							<img class="avatar rounded-circle" src="images/gracias.png" alt="Avatar" style="width: 180px">
 							<p class="card-text">No dudes en contactar conmigo si tienes alguna oportunidad de trabajo relacionada con la programación, diseño web, estadística, análisis de datos, matemáticas o cualquier trabajo en el que creas que mi perfil puede encajar</p>
 						</div>
 					</div>
