--- a/contact.html
+++ b/contact.html
@@ -35,12 +35,12 @@
 					<li class="nav-item active">
 						<a class="nav-link" href="#">Contacto<span class="sr-only">(current)</span></a>
 					</li>
-					<li class="nav-item">
+					<!--<li class="nav-item">
 						<a class="nav-link" href="#">Pricing</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link disabled" href="#">Disabled</a>
-					</li>
+					</li>-->
 				</ul>
 			</div>
 		</nav>
