--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
           <li class="nav-item">
             <a class="nav-link" href="contact.html">Contacto</a>
           </li>
-          <li class="nav-item">
+          <!--<li class="nav-item">
             <a class="nav-link" href="#">Pricing</a>
           </li>
           <li class="nav-item">
             <a class="nav-link disabled" href="#">Disabled</a>
-          </li>
+          </li>-->
         </ul>
       </div>
     </nav>
